--- a/index.html
+++ b/index.html
@@ -31,21 +31,23 @@
       </div>
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item" href="/">
+                  
+          <a class="navbar-item" href="https://rmuzaeftdbcqllehgsg0ww-on.drv.tw/hromiguel/">
             Home
           </a>
-          <a class="navbar-item" href="/contac">
+          <a class="navbar-item" href="https://rmuzaeftdbcqllehgsg0ww-on.drv.tw/hromiguel/contac">
             Contacto
           </a>
-          <a class="navbar-item" href="/about">
+          <a class="navbar-item" href="https://rmuzaeftdbcqllehgsg0ww-on.drv.tw/hromiguel/about">
             Sobre Nosotros
           </a>
-          <a class="navbar-item" href="/login">
+          <a class="navbar-item" href="https://rmuzaeftdbcqllehgsg0ww-on.drv.tw/hromiguel/login">
             Login
           </a>
-          <a class="navbar-item" href="/registro">
+          <a class="navbar-item" href="https://rmuzaeftdbcqllehgsg0ww-on.drv.tw/hromiguel/registro">
             Registro
           </a>
+          
         </div>
 
       </div>
