--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                         <div class="navbar-end">
                             <div class="tabs is-right">
                                 <ul>
-                                    <li class="is-active"><a href="https://hromiguel.alapec.com/#/">Inicio</a></li>
-                                    <li><a href="https://hromiguel.alapec.com/#/">Noticias</a></li>
-                                    <li><a href="https://hromiguel.alapec.com/#/login">Inicio Sesion</a></li>
-                                    <li><a href="https://hromiguel.alapec.com/#/register">Registrarse</a></li>
+                                    <li class="is-active"><a href="https://condominiohm.netlify.app/">Inicio</a></li>
+                                    <li><a href="https://condominiohm.netlify.app/">Noticias</a></li>
+                                    <li><a href="https://condominiohm.netlify.app/login">Inicio Sesion</a></li>
+                                    <li><a href="https://condominiohm.netlify.app/register">Registrarse</a></li>
                                     <li><a href="">Sobre Nosotros</a></li>
                                 </ul>
                             </div>
@@ -72,7 +72,7 @@
                         </h2>
                         <br>
                         <p class="has-text-centered">
-                          <li><a class="button is-medium is-info is-outlined" href="https://hromiguel.alapec.com/#/">Leer mas</a></li>
+                          <li><a class="button is-medium is-info is-outlined" href="https://condominiohm.netlify.app/">Leer mas</a></li>
                         </p>
                     </div>
                 </div>
