cambio en index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#about">Sobre Nosotros</a></li>
               
                 <li><a href="#menu">Galeria</a></li>
-                <li><a href="https://hromiguel.alapec.com/#/">Blog</a></li>
+                <li><a href="https://condominiohm.netlify.app/">Blog</a></li>
             
             </ul>
         </nav>
@@ -34,7 +34,7 @@
         <div class="content">
             <h1>El mejor lugar para vivir</h1>
             <p>Noticias y novedades de nuestra Urbanización.</p>
-            <button class="btn"><a class="button is-medium is-info is-outlined" href="https://hromiguel.alapec.com/#/">Leer mas</a></button>
+            <button class="btn"><a class="button is-medium is-info is-outlined" href="https://condominiohm.netlify.app/">Leer mas</a></button>
         </div>
     </header>
     <main>
