--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#about">Sobre Nosotros</a></li>
               
                 <li><a href="#menu">Galeria</a></li>
-                <li><a href="https://condominiohm.netlify.app/">Blog</a></li>
+                <li><a href="http://143.244.165.90:3000">Blog</a></li>
             
             </ul>
         </nav>
@@ -34,7 +34,7 @@
         <div class="content">
             <h1>El mejor lugar para vivir</h1>
             <p>Noticias y novedades de nuestra Urbanización.</p>
-            <button class="btn"><a class="button is-medium is-info is-outlined" href="https://condominiohm.netlify.app/">Leer mas</a></button>
+            <button class="btn"><a class="button is-medium is-info is-outlined" href="http://143.244.165.90:3000">Leer mas</a></button>
         </div>
     </header>
     <main>
@@ -96,7 +96,7 @@
           <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
           <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
         </div>
-        <p>Copyright &copy; 2021 - <span><a href="https://hromiguel.alapec.com/#/">alapec.com</a> </span></p>
+        <p>Copyright &copy; 2021 - <span><a href="https://alapec.com/#/">alapec.com</a> </span></p>
       </footer>
 </body>
 </html>
