--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#about">Sobre Nosotros</a></li>
+                <li><a href="https://webhromiguel.alapec.com/consultasocio/">Socios</a></li>
               
-                <li><a href="#menu">Galeria</a></li>
-                <li><a href="https://hromiguelapi.alapec.com/">Blog</a></li>
-            
+                <li><a href="https://webhromiguel.alapec.com/cnstaegreso/">Egresos</a></li>
+                <li><a href="https://webhromiguel.alapec.com/estadocta/">Estado de Cuenta</a></li>            
             </ul>
         </nav>
         </div>
