--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="/socios">Socios</a></li>
               
-                <li><a href="https://webhromiguel.alapec.com/cnstaegreso/">Egresos</a></li>
-                <li><a href="https://webhromiguel.alapec.com/estadocta/">Estado de Cuenta</a></li>            
+                <li><a href="/estctaegreso/">Egresos</a></li>
+                <li><a href="/estadocta">Estado de Cuenta</a></li>            
             </ul>
         </nav>
         </div>
